erDiagram
    users {
        UUID id
        string email
        string hash_password
    }
    users }o--o{ groups : belongs-to
    groups {
        UUID id
        string name
    }

    datasources {
        UUID id
        string s3_id
        string name
        ENUM file_type
        float size
        date created_at
        UUID group_id
    }

    json_table{
        SERIAL id
        JSONB document

    }
    json_table ||--|o datasources : references-JSON
    datasources ||--o{ groups : property-of

    jobs {
        UUID id
        string name
        JSONB pipeline
        ENUM status
        UUID result_datasource_id

    }
    jobs }o--o{ datasources : related-to
    jobs ||--|o datasources : result_datasource

    refresh_tokens {
        UUID id
        token_hash VARCHAR(255)
        expires_at TIMESTAMP
        created_at TIMESTAMP
    }
    refresh_tokens ||--O{ users : associated_to
